--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,59 +9,53 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     {% block head %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/carousel.css') }}"/>
 
-        <title>{% block title %}{% endblock %}This is {{ name }} Website</title>
+    <title>Prem Kumar's Portfolio - {% block title %}{% endblock %} Page </title>
     {% endblock %}
 
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <header class="mb-5">
-            <!-- As a link -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container">
-                    <a class="navbar-brand" href="/">My Site</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="{{ url_for('simple_pages.show', page="index")}}">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="about")}}">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page1")}}">Page 1</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page2")}}">Page 2</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page3")}}">Page 3</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('simple_pages.show', page="page4")}}">Page 4</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-    </div>
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
-    <footer>
 
-    </footer>
+<header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 
-</div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('simple_pages.show', page='index')}}">Home </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('simple_pages.show', page='git')}}">Git </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('simple_pages.show', page='docker')}}">Docker </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('simple_pages.show', page='flask')}}">Python-Flask </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('simple_pages.show', page='cicd')}}">CI-CD </a>
+                </li>
+
+            </ul>
+
+        </div>
+    </nav>
+</header>
+
+
+{% block content %}
+{% endblock %}
+
+<footer class="container m-4">
+    <p>&copy; 2022 PremKumar Website</p>
+</footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
