Updated the need condition in jobs

--- a/app/simple_pages/templates/cicd.html
+++ b/app/simple_pages/templates/cicd.html
@@ -107,7 +107,7 @@
                          <li>
                             Production Workflow:
                             <p>
-                                Whenever there is a pull request event to the master branch, following two jobs will be
+                                Whenever there is a merge request or push event to the master branch, following three jobs will be
                                 triggered:
                             <ul>
                                 <li>
@@ -134,7 +134,7 @@
                                 </li>
 
                                 <li>
-                                    Deploy_Heroku <p>
+                                    Build  <p>
                                     <ul>
                                         <li>
                                             Jobs run on the latest version of ubuntu linux runner
