--- a/app/simple_pages/templates/cicd.html
+++ b/app/simple_pages/templates/cicd.html
@@ -78,6 +78,9 @@
                                     Deploy_Heroku <p>
                                     <ul>
                                         <li>
+                                            This job will be triggered if Run_Pytest is successful
+                                        </li>
+                                        <li>
                                             Jobs run on the latest version of ubuntu linux runner
                                         </li>
                                         <li>
@@ -93,10 +96,7 @@
                                             Uses heroku_email. E-mail that we use with heroku
                                         </li>
                                         <li>
-                                            Uses heroku_app_name for deploying
-                                        </li>
-                                        <li>
-                                            Deploys using Dockerfile in project root
+                                            Uses heroku_app_name(pm42-project1-dev) for deploying
                                         </li>
                                     </ul>
                                     </p>
@@ -104,14 +104,15 @@
                             </ul>
                             </p>
                         </li>
-                         <li>
+                        <li>
                             Production Workflow:
                             <p>
-                                Whenever there is a merge request or push event to the master branch, following three jobs will be
+                                Whenever there is a merge request or push event to the master branch, following three
+                                jobs will be
                                 triggered:
                             <ul>
                                 <li>
-                                    Run_Pytest <p>
+                                    Runtest <p>
                                     <ul>
                                         <li>
                                             Jobs run on the latest version of ubuntu linux runner
@@ -134,8 +135,35 @@
                                 </li>
 
                                 <li>
-                                    Build  <p>
+                                    Build-Container <p>
                                     <ul>
+                                        <li>
+                                            This job will run if runtest job is successful
+                                        </li>
+                                        <li>
+                                            Jobs run on the latest version of ubuntu linux runner
+                                        </li>
+                                        <li>
+                                            Uses the v2 of the actions/checkout
+                                        </li>
+                                        <li>
+                                            Uses docker username and password from github secrets to login to Docker Hub
+                                        </li>
+                                        <li>
+                                            Generates the tag and labels of docker images
+                                        </li>
+                                        <li>
+                                            Builds and pushes the image to the repository
+                                        </li>
+                                    </ul>
+                                    </p>
+                                </li>
+                                <li>
+                                    Deploy <p>
+                                    <ul>
+                                        <li>
+                                            This job will run if build-container job is successful
+                                        </li>
                                         <li>
                                             Jobs run on the latest version of ubuntu linux runner
                                         </li>
@@ -146,13 +174,13 @@
                                         <li>
                                             Uses heroku_api_key for authentication. This is found in heroku homepage
                                             account settings and should be added to
-                                            Github repository under settings -> secrets.
+                                            GitHub repository under settings -> secrets.
                                         </li>
                                         <li>
                                             Uses heroku_email. E-mail that we use with heroku
                                         </li>
                                         <li>
-                                            Uses heroku_app_name for deploying
+                                            Uses heroku_app_name(pm42-project1-prd) for deploying
                                         </li>
                                         <li>
                                             Deploys using Dockerfile in project root
@@ -168,75 +196,49 @@
 
             </div>
         </div>
-
-        <div class="col-md-auto">
-            <div class="card border-dark mb-3" style="max-width: 22rem; max-height: fit-content">
-                <div class="card-header text-dark">Repository</div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card border-dark mb-3" style="max-width: fit-content; max-height: fit-content">
+                <div class="card-header text-dark">Code Review Process</div>
                 <div class="card-body text-dark">
-                    <p class="card-text">A Git repository is the .git/ folder inside a project. This repository tracks
-                        all changes made to files in our project, building a history over time. If we delete
-                        the .git/ folder, then we delete our project’s history.</p>
-                </div>
-                <div class="card-footer bg-transparent border-dark">
-                    <h6 class="card-title">Command: git init</h6>
-                    <p>Initialize an existing directory as a Git repository</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-auto">
-            <div class="card border-dark mb-3" style="max-width: 30rem; max-height: fit-content">
-                <div class="card-header text-dark">Merge</div>
-                <div class="card-body text-dark">
-                    <p class="card-text">The git merge command integrates the independent lines of development into a
-                        single branch. The primary use of git merge is to combine two branches. It uses a
-                        non-destructive operation to combine two branches histories without changing them. In addition,
-                        it creates a new merge commit every time it’s used.
+                    <p class="card-text">When we compare and pull request from branch to master, development workflow
+                        job will be triggered and the changes will be deployed to the development server once pytest
+                        check is completed.</p>
+                    <p>This gives an opportunity to check if the new features or changes which we created are working as
+                        intended and does not affect the existing working code.
+                        By reviewing the changes in the development server, we can double-check our new code and once
+                        everything works fine we can merge it to the master and deploy it to the production server.
                     </p>
-                </div>
-                <div class="card-footer bg-transparent border-dark">
-                    <h6 class="card-title">Command: git merge [branch]</h6>
-                    <p>Merge the specified branch’s history into the current one</p>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
-        <div class="col-md-auto">
-            <div class="card border-dark mb-3" style="max-width: 22rem">
-                <div class="card-header text-dark">Tag</div>
+        <div class="col-md-6">
+            <div class="card border-dark mb-3" style="max-width: fit-content; max-height: fit-content">
+                <div class="card-header text-dark">Production Deployment</div>
                 <div class="card-body text-dark">
-                    <p class="card-text">Tags are references that point to specific points in Git history. Tagging is
-                        generally used to capture a point in history that is used for a marked version release. A tag is
-                        like a branch that doesn’t change. Unlike branches, tags, after being created,
-                        have no further history of commits.
-                    </p>
-                </div>
-                <div class="card-footer bg-transparent border-dark">
-                    <h6 class="card-title">Command: git tag [tagname]</h6>
-                    <p>Creates a new tag</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-auto">
-            <div class="card border-dark mb-3" style="max-width: 30rem">
-                <div class="card-header text-dark">Commit</div>
-                <div class="card-body text-dark">
-                    <p class="card-text">Commit is used to save our staged changes to the local repository.
-                        We have to explicitly tell Git which changes we want to include in a commit before
-                        running the "git commit" command. This means that a file won't be automatically included in the
-                        next commit just because it was changed. Instead, we need to use the "git add" command to mark
-                        the desired changes for inclusion.
-                    </p>
-                </div>
-                <div class="card-footer bg-transparent border-dark">
-                    <h6 class="card-title">Command: git commit -m [descriptive message]</h6>
-                    <p>Commit our staged content as a new commit snapshot</p>
-                </div>
-            </div>
-        </div>
+                    <p class="card-text">When we merge or push request to the master, production workflow
+                        job will be triggered and the changes will be deployed to the production server once pytest
+                        check is completed and container build is successful.</p>
 
+                    <p>After the pytest job is successful, using the docker user-name and password maintained in the
+                        GitHub repository secrets, docker metadata will be extracted like tags and labels for the docker
+                        image maintained in the prod.yml file.</p>
+
+                    <p>Github then use this information to build an image and
+                        then pushes the image to the docker hub repository with the tag changing for every
+                        push.
+                    </p>
+
+                    <p>
+                        Finally the docker image built from the build-container job is used to deploy to the heroku
+                        production app.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
