--- a/app/simple_pages/templates/flask.html
+++ b/app/simple_pages/templates/flask.html
@@ -2,7 +2,7 @@
 {% block title %}Flask{% endblock %}
 {% block content %}
 <div class="container">
-    <div class="card border-light mb-3 mt-2">
+    <div class="card border-dark mb-3 mt-2">
         <h2 class="card-header">Flask - Micro Web Framework written in Python</h2>
         <div class="card-body">
             <h5 class="card-title">Introduction</h5>
@@ -44,9 +44,12 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="col-md-auto ">
-            <div class="card mb-3" style="width: 50rem;">
+
+    <div class="row">
+        <div class="col-md-8">
+            <div class="card mb-3">
                 <img class="card-img-top" src="{{ url_for('static', filename='images/static.png') }}"
                      alt="Static File Rendering">
                 <div class="card-body">
@@ -63,7 +66,19 @@
                     </p>
                 </div>
             </div>
-
+        </div>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <img class="card-img" src="{{ url_for('static', filename='images/flaskrender.png') }}"
+                     alt="Dev Workflow">
+                <div class="card-footer">
+                    <h5 class="card-title">Flask Rendering</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
             <div class="card mb-3" style="width: 50rem;">
                 <img class="card-img-top" src="{{ url_for('static', filename='images/template_rendering.png') }}"
                      alt="Template Rendering">
@@ -78,7 +93,14 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <img class="card-img" src="{{ url_for('static', filename='images/flaskhome.jpeg') }}"
+                     alt="Flask Rendering">
+            </div>
+        </div>
     </div>
+
     <div class="row">
         <div class="col-md-8">
             <div class="card mb-3">
@@ -201,19 +223,23 @@
                             </ul>
                         </li>
 
-                        <li>docker-compose.yml <p> Orchestration file that contains the configuration to develop locally,
+                        <li>docker-compose.yml <p> Orchestration file that contains the configuration to develop
+                            locally,
                             it overrides the Dockerfile to run the flask development server instead of running the
                             gunicorn server that is used for hosting on Heroku<</p>
                         </li>
 
                         <li>
-                            heroku.yml <p> A manifest file that allows us to build Docker images and specifies the release phase on Heroku</p>
+                            heroku.yml <p> A manifest file that allows us to build Docker images and specifies the
+                            release phase on Heroku</p>
                         </li>
                         <li>
-                            readme.md <p> A markdown file that introduces and explains our project. It contains Github Workflow badges and Heroku URL</p>
+                            readme.md <p> A markdown file that introduces and explains our project. It contains Github
+                            Workflow badges and Heroku URL</p>
                         </li>
                         <li>
-                            requirements.txt <p> A text file specifying the python packages that are required to run our project</p>
+                            requirements.txt <p> A text file specifying the python packages that are required to run our
+                            project</p>
                         </li>
                         <li>
                             tests <p> Contains python file that contains code to test our web page</p>
