--- a/app/simple_pages/templates/docker.html
+++ b/app/simple_pages/templates/docker.html
@@ -2,7 +2,7 @@
 {% block title %}Docker{% endblock %}
 {% block content %}
 <div class="container">
-    <div class="card border-light mb-3 mt-2">
+    <div class="card border-dark mb-3 mt-2">
         <h2 class="card-header">Docker - Open Source Containerization Platform</h2>
         <div class="card-body">
             <h5 class="card-title">Introduction</h5>
