--- a/app/simple_pages/templates/cicd.html
+++ b/app/simple_pages/templates/cicd.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}CICD{% endblock %}
+{% block cicd %}active{% endblock %}
 {% block content %}
 <div class="container">
     <div class="card border-dark mb-3 mt-2">
