--- a/app/simple_pages/templates/docker.html
+++ b/app/simple_pages/templates/docker.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Docker{% endblock %}
+{% block docker %}active{% endblock %}
 {% block content %}
 <div class="container">
     <div class="card border-dark mb-3 mt-2">
