--- a/app/simple_pages/templates/flask.html
+++ b/app/simple_pages/templates/flask.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Flask{% endblock %}
+{% block flask %}active{% endblock %}
 {% block content %}
 <div class="container">
     <div class="card border-dark mb-3 mt-2">
