--- a/app/simple_pages/templates/git.html
+++ b/app/simple_pages/templates/git.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Git{% endblock %}
+{% block git %}active{% endblock %}
 {% block content %}
 <div class="container">
     <div class="card border-dark mb-3 mt-2">
