--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
+{% block home %}active{% endblock %}
 {% block content %}
 
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
