--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,6 +41,18 @@
                 <li class="nav-item">
                     <a class="nav-link {% block cicd %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">CI-CD </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link {% block glossary %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">Glossary </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% block aaa %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">AAA </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% block oop %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">OOP </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% block solid %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">SOLID </a>
+                </li>
 
             </ul>
 
