Added links for new menu

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,16 +42,16 @@
                     <a class="nav-link {% block cicd %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">CI-CD </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% block glossary %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">Glossary </a>
+                    <a class="nav-link {% block glossary %}{% endblock %}" href="{{ url_for('simple_pages.show', page='glossary')}}">Glossary </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% block aaa %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">AAA </a>
+                    <a class="nav-link {% block aaa %}{% endblock %}" href="{{ url_for('simple_pages.show', page='aaa')}}">AAA </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% block oop %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">OOP </a>
+                    <a class="nav-link {% block oop %}{% endblock %}" href="{{ url_for('simple_pages.show', page='oop')}}">OOP </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% block solid %}{% endblock %}" href="{{ url_for('simple_pages.show', page='cicd')}}">SOLID </a>
+                    <a class="nav-link {% block solid %}{% endblock %}" href="{{ url_for('simple_pages.show', page='solid')}}">SOLID </a>
                 </li>
 
             </ul>
