Modified the title

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/carousel.css') }}"/>
 
-    <title>Prem Kumar's Portfolio - {% block title %}{% endblock %} Page </title>
+    <title>Portfolio - {% block title %}{% endblock %} Page </title>
     {% endblock %}
 
 </head>
