Updated the images in glossary

--- a/app/simple_pages/templates/glossary.html
+++ b/app/simple_pages/templates/glossary.html
@@ -21,7 +21,7 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/oops.png') }}" class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -41,7 +41,7 @@
         </div>
         <div class="col-3 my-2 mx-2">
             <div class="card bg-dark text-white">
-                <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img"
+                <img src="{{ url_for('static', filename='images/glossary/class-right.png') }}" class="card-img"
                      alt="Image Overlay">
                 <div class="card-img-overlay">
                     <h6 class="card-title">Sagittis purus</h6>
@@ -59,7 +59,8 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/namespace-left.jpeg') }}"
+                             class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -83,15 +84,8 @@
         </div>
         <div class="col-3 my-2 mx-2">
             <div class="card bg-dark text-white">
-                <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img"
+                <img src="{{ url_for('static', filename='images/glossary/namespace-right.jpeg') }}" class="card-img"
                      alt="Image Overlay">
-                <div class="card-img-overlay">
-                    <h6 class="card-title">Sagittis purus</h6>
-                    <p class="card-text">This is a wider card with supporting text below as a natural
-                        lead-in to
-                        additional content. This content is a little bit longer.</p>
-
-                </div>
             </div>
         </div>
     </div>
@@ -104,7 +98,7 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/const-left.png') }}" class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -142,37 +136,37 @@
         <div class="col-md-2">
             <div class="card">
                 <img class="card-img-top"
-                     src="{{ url_for('static', filename='images/cicd.jpeg') }}" alt="Card image cap">
+                     src="{{ url_for('static', filename='images/glossary/oops-1.png') }}" alt="Card image cap">
             </div>
         </div>
         <div class="col-md-2">
             <div class="card">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/docker.jpeg') }}"
+                <img class="card-img-top" src="{{ url_for('static', filename='images/glossary/oops-2.png') }}"
                      alt="Card image cap">
             </div>
         </div>
         <div class="col-md-2">
             <div class="card">
                 <img class="card-img-top"
-                     src="{{ url_for('static', filename='images/cicd.jpeg') }}" alt="Card image cap">
+                     src="{{ url_for('static', filename='images/glossary/oops-3.png') }}" alt="Card image cap">
             </div>
         </div>
         <div class="col-md-2">
             <div class="card">
                 <img class="card-img-top"
-                     src="{{ url_for('static', filename='images/docker.jpeg') }}" alt="Card image cap">
+                     src="{{ url_for('static', filename='images/glossary/oops-4.png') }}" alt="Card image cap">
             </div>
         </div>
         <div class="col-md-2">
             <div class="card">
                 <img class="card-img-top"
-                     src="{{ url_for('static', filename='images/cicd.jpeg') }}" alt="Card image cap">
+                     src="{{ url_for('static', filename='images/glossary/oops-5.jpeg') }}" alt="Card image cap">
             </div>
         </div>
         <div class="col-md-2">
             <div class="card">
                 <img class="card-img-top"
-                     src="{{ url_for('static', filename='images/cicd.jpeg') }}" alt="Card image cap">
+                     src="{{ url_for('static', filename='images/glossary/oops-6.jpeg') }}" alt="Card image cap">
             </div>
         </div>
     </div>
@@ -184,7 +178,7 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/typecasting-left.jpeg') }}" class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -205,13 +199,8 @@
         </div>
         <div class="col-3 my-2 mx-2">
             <div class="card bg-dark text-white">
-                <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img"
+                <img src="{{ url_for('static', filename='images/glossary/typehint-right.jpeg') }}" class="card-img"
                      alt="Image Overlay">
-                <div class="card-img-overlay">
-                    <h6 class="card-title">Sagittis purus</h6>
-                    <p class="card-text"></p>
-
-                </div>
             </div>
         </div>
     </div>
@@ -223,7 +212,7 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/unittesting.png') }}" class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -266,7 +255,7 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/fixture.webp') }}" class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -304,7 +293,7 @@
     <div class="row">
         <div class="card-group">
             <div class="card mx-2">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/oops.png') }}"
+                <img class="card-img-top" src="{{ url_for('static', filename='images/glossary/method.png') }}"
                      alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Property</h5>
@@ -316,7 +305,7 @@
                 </div>
             </div>
             <div class="card mx-2">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/oops.png') }}"
+                <img class="card-img-top" src="{{ url_for('static', filename='images/glossary/staticmethod.jpeg') }}"
                      alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Static Property</h5>
@@ -330,7 +319,7 @@
                 </div>
             </div>
             <div class="card mx-2">
-                <img class="card-img-top" src="{{ url_for('static', filename='images/oops.png') }}"
+                <img class="card-img-top" src="{{ url_for('static', filename='images/glossary/instancemethod.jpeg') }}"
                      alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Instance Property</h5>
@@ -353,7 +342,7 @@
             <div class="card my-2">
                 <div class="row g-0">
                     <div class="col-md-3">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/oop/encapsulation.png') }}" class="card-img">
                     </div>
                     <div class="col-md-9">
                         <div class="card-body">
@@ -381,7 +370,7 @@
             <div class="card my-2">
                 <div class="row g-0">
                     <div class="col-md-3">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/oop/poly_right.jpeg') }}" class="card-img">
                     </div>
                     <div class="col-md-9">
                         <div class="card-body">
@@ -405,32 +394,32 @@
 
 <div class="container">
     <div class="card mb-3">
-        <img class="card-img-top" style="max-height: 20pc" src="{{ url_for('static', filename='images/git.png') }}"
+        <img class="card-img-top" style="max-height: 20pc" src="{{ url_for('static', filename='images/solid/solid-4.jpeg') }}"
              alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">SOLID - An Acronym for the fist five object-oriented principles by Robert
                 C.Martin</h5>
             <p class="card-text">
-                <ul>
-                    <li>S-Single-responsibility Principle<p>
-                        A class should have one and only one reason to change, meaning that a class should have only one
-                        job.
-                    </p></li>
-                    <li>O-Open-closed Principle<p>
-                        Objects or entities should be open for extension but closed for modification.
-                    </p></li>
-                    <li>L-Liskov Substitution Principle<p>
-                        Every subclass or derived class should be substitutable for their base or parent class
-                    </p></li>
-                    <li>I-Interface Segregation Principle<p>
-                        A class should never be forced to implement an interface that it does not use, or class shouldn’t
-                        be forced to depend on methods they do not use.
-                    </p></li>
-                    <li>D-Dependency Inversion Principle<p>
-                        Entities must depend on abstractions, not on concretions. High-level module must
-                        not depend on the low-level module, but they should depend on abstractions.
-                    </p></li>
-                </ul>
+            <ul>
+                <li>S-Single-responsibility Principle<p>
+                    A class should have one and only one reason to change, meaning that a class should have only one
+                    job.
+                </p></li>
+                <li>O-Open-closed Principle<p>
+                    Objects or entities should be open for extension but closed for modification.
+                </p></li>
+                <li>L-Liskov Substitution Principle<p>
+                    Every subclass or derived class should be substitutable for their base or parent class
+                </p></li>
+                <li>I-Interface Segregation Principle<p>
+                    A class should never be forced to implement an interface that it does not use, or class shouldn’t
+                    be forced to depend on methods they do not use.
+                </p></li>
+                <li>D-Dependency Inversion Principle<p>
+                    Entities must depend on abstractions, not on concretions. High-level module must
+                    not depend on the low-level module, but they should depend on abstractions.
+                </p></li>
+            </ul>
             </p>
         </div>
     </div>
@@ -442,7 +431,7 @@
             <div class="card my-2" style="max-width: 950px;">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img src="{{ url_for('static', filename='images/oops.png') }}" class="card-img">
+                        <img src="{{ url_for('static', filename='images/glossary/pylint.png') }}" class="card-img">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -474,7 +463,7 @@
 
 <div class="container">
     <div class="card mb-3">
-        <img class="card-img-top" style="max-height: 20pc" src="{{ url_for('static', filename='images/git.png') }}"
+        <img class="card-img-top" style="max-height: 20pc" src="{{ url_for('static', filename='images/glossary/designpatterns.png') }}"
              alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Design Patterns : Pre-made blueprints that we can customize
