Added factory design pattern

--- a/app/simple_pages/templates/solid.html
+++ b/app/simple_pages/templates/solid.html
@@ -345,5 +345,22 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="card mb-3">
+        <img class="card-img-top" style="max-height: 20pc"
+             src="{{ url_for('static', filename='images/glossary/designpatterns.png') }}"
+             alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Factory Design Patterns</h5>
+            <p class="card-text"> Factory Method is a creational design pattern that provides an interface for
+                creating objects in a
+            superclass, but allows subclasses to alter the type of objects that will be created.</p>
+
+            <p>
+                Used factory method in calculator to create objects of different calculations.
+            </p>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
